# asocial

./: .gitignore  .gitmodules  Cargo.toml  GEMINI.md  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: ci.yml  claude-review.yml
docs/: asocial.md  openproject_tasks.csv  readme.md  roadmap.md
docs/plans/: roadmap.md
migrations/: 202601280000_init.sql  202601280001_add_post_status.sql  202601280002_add_media_paths.sql
src/: composer.rs  job_queue.rs  main.rs  settings.rs  theme.rs
src/integrations/: bluesky.rs  mastodon.rs  mod.rs
