[package]
name = "asocial"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug"] } # Using 0.12 stable for now
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
